#12915- Refatora método criarHierarquia